# activities-predictor

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Dockerfile_slim  README.md  deployement_redacted.yaml  docker-compose-beta.yml  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
activity_predictor/: __init__.py  logger.py  main.py  usecases.py
