[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "activity_predictor"
authors = [{name = "William Droz", email = "william.droz@idiap.ch"},]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = [
]
[project.urls]
Home = "https://gitlab.idiap.ch/wenet/activities-predictor"

[project.optional-dependencies]
dev = [
    "bandit >= 1.7.4,<2",
    "black == 22.3.0",
    "coverage >= 6.4.2,<7.0.0",
    "flake8 >=4.0.1,<5.0.0",
    "mypy >=0.971,<1.0",
    "pre-commit >=2.17.0,<3.0.0",
    "pytest >=7.1.2,<8.0.0",
    "ruff == 0.0.254",
]
